syntax = "proto3";

package exporter;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

service PulseExporter {
    rpc Export (GetPulses) returns (stream Pulse) {
    }
}

message GetPulses {
    uint32 Polymorph = 16;

    bytes PulseNumber = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.PulseNumber", (gogoproto.nullable) = false];
    uint32 Count = 22;
}

message Pulse {
    uint32 Polymorph = 16;

    bytes PulseNumber = 20 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.PulseNumber", (gogoproto.nullable) = false];
    bytes Entropy = 21 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Entropy", (gogoproto.nullable) = false];
    int64 PulseTimestamp = 22;
}


